Adiciona CRUD de recompensas

--- a/src/Tasks-Points/Tasks-Points/Views/Shared/_Layout.cshtml
+++ b/src/Tasks-Points/Tasks-Points/Views/Shared/_Layout.cshtml
@@ -33,6 +33,9 @@
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Index">Usuários</a>
                                 </li>
                             }
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Recompensas" asp-action="Index">Recompensas</a>
+                            </li>
                         </ul>
                     }
                     <ul class="navbar-nav" >
