--- a/src/Tasks-Points/Tasks-Points/Views/Tarefas/Edit.cshtml
+++ b/src/Tasks-Points/Tasks-Points/Views/Tarefas/Edit.cshtml
@@ -13,29 +13,74 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="Nome" class="control-label"></label>
-                <input asp-for="Nome" class="form-control" />
-                <span asp-validation-for="Nome" class="text-danger"></span>
+                @if (User.IsInRole("User"))
+                {
+                    <label asp-for="Nome" class="control-label"></label>
+                    <input asp-for="Nome" class="form-control" readonly="readonly"/>
+                    <span asp-validation-for="Nome" class="text-danger"></span>
+                }
+                else
+                {
+                    <label asp-for="Nome" class="control-label"></label>
+                    <input asp-for="Nome" class="form-control" />
+                    <span asp-validation-for="Nome" class="text-danger"></span>
+                }   
             </div>
             <div class="form-group">
-                <label asp-for="Prioridade" class="control-label"></label>
-                <select asp-for="Prioridade" class="form-control" asp-items="Html.GetEnumSelectList<GrauPrioridade>()"></select>
-                <span asp-validation-for="Prioridade" class="text-danger"></span>
+                @if (User.IsInRole("User"))
+                {
+                    <label asp-for="Prioridade" class="control-label"></label>
+                    <select asp-for="Prioridade" class="form-control" disabled="disabled" asp-items="Html.GetEnumSelectList<GrauPrioridade>()"></select>
+                    <span asp-validation-for="Prioridade" class="text-danger"></span>
+                }
+                else
+                {
+                    <label asp-for="Prioridade" class="control-label"></label>
+                    <select asp-for="Prioridade" class="form-control" asp-items="Html.GetEnumSelectList<GrauPrioridade>()"></select>
+                    <span asp-validation-for="Prioridade" class="text-danger"></span>    
+                }
             </div>
             <div class="form-group">
-                <label asp-for="Responsavel" class="control-label"></label>
-                <input asp-for="Responsavel" class="form-control" />
-                <span asp-validation-for="Responsavel" class="text-danger"></span>
+                @if (User.IsInRole("User"))
+                {
+                    <label asp-for="Responsavel" class="control-label"></label>
+                    <input asp-for="Responsavel" class="form-control" readonly="readonly"/>
+                    <span asp-validation-for="Responsavel" class="text-danger"></span>
+                }
+                else
+                {
+                    <label asp-for="Responsavel" class="control-label"></label>
+                    <input asp-for="Responsavel" class="form-control" />
+                    <span asp-validation-for="Responsavel" class="text-danger"></span>   
+                }
             </div>
             <div class="form-group">
-                <label asp-for="PrazoLimite" class="control-label"></label>
-                <input asp-for="PrazoLimite" class="form-control" />
-                <span asp-validation-for="PrazoLimite" class="text-danger"></span>
+                @if (User.IsInRole("User"))
+                {
+                    <label asp-for="PrazoLimite" class="control-label"></label>
+                    <input asp-for="PrazoLimite" class="form-control" readonly="readonly" />
+                    <span asp-validation-for="PrazoLimite" class="text-danger"></span>
+                }
+                else
+                {
+                    <label asp-for="PrazoLimite" class="control-label"></label>
+                    <input asp-for="PrazoLimite" class="form-control" />
+                    <span asp-validation-for="PrazoLimite" class="text-danger"></span>   
+                }
             </div>
             <div class="form-group">
-                <label asp-for="Coins" class="control-label"></label>
-                <input asp-for="Coins" class="form-control" />
-                <span asp-validation-for="Coins" class="text-danger"></span>
+                @if (User.IsInRole("User"))
+                {
+                    <label asp-for="Coins" class="control-label"></label>
+                    <input asp-for="Coins" class="form-control" readonly="readonly" />
+                    <span asp-validation-for="Coins" class="text-danger"></span>
+                }
+                else
+                {
+                    <label asp-for="Coins" class="control-label"></label>
+                    <input asp-for="Coins" class="form-control" />
+                    <span asp-validation-for="Coins" class="text-danger"></span>                   
+                }
             </div>
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
