Adiciona recurso de busca/paginação/ordenação.

--- a/src/Tasks-Points/Tasks-Points/Views/Tarefas/Index.cshtml
+++ b/src/Tasks-Points/Tasks-Points/Views/Tarefas/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     <a class="btn btn-outline-dark" asp-action="Create">Criar nova</a>
 </p>
-<table class="table">
+<table class="table" id="table-tarefas">
     <thead>
         <tr>
             <th>
