--- a/src/Tasks-Points/Tasks-Points/Views/Usuarios/Index.cshtml
+++ b/src/Tasks-Points/Tasks-Points/Views/Usuarios/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     <a class="btn btn-outline-dark" asp-action="Create">Criar novo</a>
 </p>
-<table class="table">
+<table class="table" id="table-usuarios">
     <thead>
         <tr>
             <th>
