Realizando Desenvolvimento do Fluxo Final da Aplicação.

--- a/src/Tasks-Points/Tasks-Points/Views/Recompensas/Create.cshtml
+++ b/src/Tasks-Points/Tasks-Points/Views/Recompensas/Create.cshtml
@@ -5,6 +5,7 @@
 }
 
 <h1>Adicionar</h1>
+<h5 class="p-2 mb-5 bg-dark text-white">Seu Saldo: @ViewBag.Coins</h5>
 
 <p>Informe os dados referentes a recompensa que deseja cadastrar:</p>
 <hr />
