--- a/src/Tasks-Points/Tasks-Points/Views/Recompensas/Delete.cshtml
+++ b/src/Tasks-Points/Tasks-Points/Views/Recompensas/Delete.cshtml
@@ -5,6 +5,7 @@
 }
 
 <h1>Deletar</h1>
+<h5 class="p-2 mb-5 bg-dark text-white">Seu Saldo: @ViewBag.Coins</h5>
 
 <h5>Tem certeza que deseja deletar este item?</h5>
 <div>
