--- a/src/Tasks-Points/Tasks-Points/Views/Recompensas/Details.cshtml
+++ b/src/Tasks-Points/Tasks-Points/Views/Recompensas/Details.cshtml
@@ -5,6 +5,7 @@
 }
 
 <h1>Detalhes</h1>
+<h5 class="p-2 mb-5 bg-dark text-white">Seu Saldo: @ViewBag.Coins</h5>
 
 <div>
     <p>Visualize os detalhes desse item logo abaixo:</p>
