--- a/src/Tasks-Points/Tasks-Points/Views/Recompensas/Edit.cshtml
+++ b/src/Tasks-Points/Tasks-Points/Views/Recompensas/Edit.cshtml
@@ -5,6 +5,7 @@
 }
 
 <h1>Editar</h1>
+<h5 class="p-2 mb-5 bg-dark text-white">Seu Saldo: @ViewBag.Coins</h5>
 <p>Altere os dados que deseja e aperte em "Salvar".</p>
 <hr />
 <div class="row">
