--- a/src/Tasks-Points/Tasks-Points/Views/Recompensas/Index.cshtml
+++ b/src/Tasks-Points/Tasks-Points/Views/Recompensas/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h1 class="p-3 mb-2 bg-dark text-white">Recompensas</h1>
-
+<h5 class="p-2 mb-5 bg-dark text-white">Seu Saldo: @ViewBag.Coins</h5>
 <p>
     <a class="btn btn-outline-dark" asp-action="Create">Criar nova</a>
 </p>
