--- a/src/Tasks-Points/Tasks-Points/Views/Shared/_Layout.cshtml
+++ b/src/Tasks-Points/Tasks-Points/Views/Shared/_Layout.cshtml
@@ -44,7 +44,9 @@
                         @if (User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item" >
-                                Olá, @User.Identity.Name <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Logout" >Sair</a>
+                                Olá, @User.Identity.Name
+                                <br/>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Logout" >Sair</a>
                             </li>
                         }
                         else
