--- a/src/Tasks-Points/Tasks-Points/Views/Usuarios/Cadastrar.cshtml
+++ b/src/Tasks-Points/Tasks-Points/Views/Usuarios/Cadastrar.cshtml
@@ -1,17 +1,22 @@
 ﻿@model Tasks_Points.Models.Usuario
 
 @{
-    ViewData["Title"] = "Login";
+    ViewData["Title"] = "Cadastrar";
 }
 
-<h1>Login</h1>
+<h1>Cadastrar novo usuário</h1>
 
-<hr/>
-<h6 style="color: #dc3545">@ViewBag.Message</h6>
+<p>Preencha todos os campos e clique em 'CADASTRAR'</p>
+<hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Login">
+        <form asp-action="Cadastrar">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control" />
@@ -22,11 +27,9 @@
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-            <div style="width: 100%; display: flex; align-items: center; justify-content: space-between;" class="form-group">
-                <input style="margin-top:15px; width:100px; font-size:16px;" type="submit" value="Acessar" class="btn btn-primary" />
-                <div style="margin-top: 15px" >
-                    <a class="btn btn-outline-info btn-sm" asp-action="Cadastrar">Cadastrar Novo Usuário</a>
-                </div>
+            <div class="form-group">
+                <input style="margin-top:15px; width:100px" type="submit" value="Cadastrar" class="btn btn-primary" /> |
+                <a style="margin-top:15px; width:100px" class="btn btn-dark" asp-action="Login">Voltar</a>
             </div>
         </form>
     </div>
